Fixes in "Coin" module.